repair styling and overlaping

--- a/src/form.css
+++ b/src/form.css
@@ -43,7 +43,9 @@ input.valid-border:focus {
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
-
+ .form-group {
+  margin-bottom: 0 !important;
+ }
 
 /* Slides */
 .slideContent {
@@ -58,18 +60,21 @@ input.valid-border:focus {
     /* position: absolute; */
     height: 636px;
     width: 100%;
+    z-index: 1
 }
 
 .middle {
     display: table-cell;
     vertical-align: middle;
-    transform: translateY(-10%)
+    transform: translateY(-10%);
+    z-index: 1
 }
 
 .inner {
     margin-left: auto;
     margin-right: auto;
     width: 570;
+    z-index: 1
 }
 /* Navigation buttons */
 .tabPanel {
@@ -84,8 +89,7 @@ input.valid-border:focus {
   border-radius: 50% !important;
   min-width: 48px !important;
   padding: 0 !important;
-  z-index: 0;
-
+  margin: 10px !important;
 }
 .tabButton:focus {
   outline: none;
@@ -109,6 +113,7 @@ box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
   border-top-right-radius: 0 !important;
   border-top-left-radius: 0 !important;
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+  z-index: 0
 }
 
 .nextButton {
@@ -165,16 +170,19 @@ box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
 }
 .radioBundle {
   padding: 5px !important;
-  padding-left: 25px !important;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  height: auto;
 }
 .radio {
+  transform: translateY(-1px);
   padding-bottom: 10px;
   padding-left: 10px
 }
 
 .label-radio {
   transform: translateY(1px);
-  display: inline-block;
+  /* display: inline-block; */
   user-select: none;
   color: #676767;
  }
@@ -204,6 +212,11 @@ input[type="date"]:in-range::-webkit-datetime-edit-year-field, input[type="date"
 .floating-label {
   -webkit-appearance: none !important;
  }
+
+ /* date */
+ /* input[type="date"] {
+   user-select: none;
+ } */
 
  /* AutoComplete */
 
@@ -254,7 +267,7 @@ input[type="date"]:in-range::-webkit-datetime-edit-year-field, input[type="date"
 
 .suggestion-active,
 .suggestions li:hover {
-  background-color: #006fee2d;
+  background-color: #D4E6FC;
   cursor: pointer;
   font-weight: 700;
 }
@@ -292,24 +305,31 @@ input[type="date"]:in-range::-webkit-datetime-edit-year-field, input[type="date"
 
 
 @media only screen and (max-width: 600px) {
-.outer {
+  .react-datepicker__portal {
+    height: 120vh;
+  }
+  .radio {
+    transform: translateY(2px);
+  }
+  .tabButton {
+    margin: 0 !important;
+  }
+  .outer {
     display: table;
     /* position: absolute; */
     height: 100vh;
     width: 100%;
-}
+  }
   .slideContent {
     padding: 25px 30px !important;
     max-height: auto;
   }
   .formBackground {
-    position: relative;
     padding-right: 0px !important;
     padding-left: 0px !important;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
-    height: 100%;
-    background-color: #E0EDFF;
+    height: 100vh;
   }
   .paperSpace {
     margin-right: 5px;
